--- a/style.css
+++ b/style.css
@@ -1,21 +1,27 @@
-
 body {
-    background: url('cover.jpg') no-repeat center fixed;
-		width: 100%;
-		min-height: 90vh;
-		background-size: 100% 100%;
+  background: url("./bg_1.jpg");
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  overflow: hidden;
 }
 
 .location {
-	margin-left: 60%;
-	margin-top: 10%;
+  margin-left: 60%;
+  margin-top: 10%;
 }
 
 .countdown {
-	left: 60%;
-	transform: skew(40deg,0deg);
+  left: 60%;
+  transform: skew(40deg, 0deg);
 }
 
 .entry {
-	font-family: 'Amatic SC', cursive;
+  font-family: "Amatic SC", cursive;
+}
+
+.entry-color {
+  color: #e96d51;
 }
