--- a/style.css
+++ b/style.css
@@ -1,11 +1,21 @@
 body {
-  background: url("./bg_1.jpg");
   width: 100%;
   height: 100vh;
-  background-size: cover;
-  background-position: center;
   position: relative;
-  overflow: hidden;
+}
+
+.bg-landing-page {
+  background-size: cover;
+  height: 100vh;
+  background: url("./bg_2.jpg") no-repeat;
+  background-size: cover;
+}
+
+.bg-programme-page {
+  background-size: cover;
+  height: 100vh;
+  background: url("./bg_1.jpg") no-repeat;
+  background-size: cover;
 }
 
 .location {
