--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@
 }
 
 .bg-programme-page {
-  height: 100vh;
-  background: url("https://source.unsplash.com/wVU58mOgJtg/640x389") no-repeat center;
+  height: 99vh;
+  background: url("https://source.unsplash.com/jBh3BGP-gjA/640x389") no-repeat center;
   background-size: cover;
 }
 
